--- a/build.xml
+++ b/build.xml
@@ -60,7 +60,7 @@
     <env key="ANDROIDSDK" value="${android-sdk}" />
     <env key="ANDROIDNDK" value="${android-ndk}" />
     <arg value="-m" />
-    <arg value="sqlite3 kivy" />
+    <arg value="sqlite3 openssl kivy" />
   </exec>
   <!-- include sqlite3 and wsgiref modules -->
   <replaceregexp file="python-for-android/dist/default/blacklist.txt"
