--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 bin/
 gen/
 *.pyo
+*.pyc
 ka-lite.zip
 
 # Local configuration file (sdk path, etc)
@@ -29,4 +30,5 @@ local.properties
 python-for-android
 
 log.txt
+
 
