--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <project name="KA Lite Android builder" default="main" basedir=".">
 
-<target name="main" depends="android-vars, python-for-android, distribute,
+<target name="main" depends="android-vars, python-for-android, kalite-javahandle-copyover, AndroidManifest-tmpl-copyover, PythonActivity-copyover, distribute,
                              ka-lite, build">
 
 </target>
@@ -43,6 +43,30 @@
     <arg line="clone https://github.com/kivy/python-for-android.git" />
   </exec>
 </target>
+
+
+<target name="kalite-javahandle-copyover"
+        description="clone the kalite_javahandle">
+
+  <delete file="python-for-android/src/src/org/kalite_javahandle/JavaHandler.java" />
+  <delete file="python-for-android/src/src/org/kalite_javahandle/VersionCode.java" />
+  <copy todir="python-for-android/src/src/org" >  
+    <fileset dir="copy-over" includes="kalite_javahandle/**"/>  
+  </copy>
+</target>
+
+<target name="AndroidManifest-tmpl-copyover"
+        description="replace the AndroidManifest.tmpl.xml">
+  <delete file="python-for-android/src/templates/AndroidManifest.tmpl.xml" />
+  <copy file="copy-over/AndroidManifest.tmpl.xml" todir="python-for-android/src/templates" />
+</target>
+
+<target name="PythonActivity-copyover"
+        description="replace the PythonActivity.java">
+  <delete file="python-for-android/src/src/org/renpy/android/PythonActivity.java" />
+  <copy file="copy-over/PythonActivity.java" todir="python-for-android/src/src/org/renpy/android" />
+</target>
+
 
 <target name="check-python-for-android-dist">
   <condition property="python-for-android-dist-exists">
